# ChangeLog for sys-devel/gcc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.675 2009/01/15 19:06:53 halcy0n Exp $

*gcc-4.2.4-r1 (15 Jan 2009)

  15 Jan 2009; Mark Loeser <halcy0n@gentoo.org> +gcc-4.2.4-r1.ebuild:
  New patchset to fix bug #228287 for HPPA

  31 Dec 2008; <solar@gentoo.org> gcc-4.3.2-r2.ebuild:
  - specs bump

  29 Dec 2008; Javier Villavicencio <the_paya@gentoo.org>
  gcc-4.3.2-r2.ebuild:
  Keyworded ~x86-fbsd.

  29 Dec 2008; Mike Frysinger <vapier@gentoo.org> gcc-4.3.2-r2.ebuild:
  Fix typo in pie alpha patchset #252677.

  29 Dec 2008; Mike Frysinger <vapier@gentoo.org> gcc-4.3.2.ebuild:
  Drop broken PIE from older version.

*gcc-4.3.2-r2 (29 Dec 2008)

  29 Dec 2008; <solar@gentoo.org> +gcc-4.3.2-r2.ebuild:
  - next phase in pie/hardened work is complete

*gcc-4.3.2-r1 (26 Dec 2008)

  26 Dec 2008; Mike Frysinger <vapier@gentoo.org> +gcc-4.3.2-r1.ebuild:
  Apply some build/ICE fixes, and a bunch of arch-specific fixes
  (arm/s390/sh/sparc/bsd/etc...), and push out an update for the PIE work.

  22 Dec 2008; <solar@gentoo.org> gcc-4.3.2.ebuild:
  - prep initial work for pie patches. thanks to kevq,zorry,psm and many others

  07 Dec 2008; Mike Frysinger <vapier@gentoo.org> gcc-4.3.2.ebuild:
  Fix by Chi-Thanh Christopher Nguyen to pull in
  app-emulation/emul-linux-x86-xlibs on amd64 multilib for USE=gcj #238297
  by Andrey Vul.

  03 Dec 2008; <solar@gentoo.org> +files/4.3.2/gcc-4.3.2-softfloat.patch,
  gcc-4.3.2.ebuild:
  - update softfloat patch

  23 Nov 2008; Mark Loeser <halcy0n@gentoo.org> gcc-4.3.2.ebuild:
  Add patch for r10k support, thanks to Joshua Kinard <kumba AT gentoo DOT
  org>; bug #247129

  25 Oct 2008; Mark Loeser <halcy0n@gentoo.org> gcc-4.3.2.ebuild:
  Add patches from gcc-4.4 for R10K support; bugs #223230 and 223231

  25 Oct 2008; Joshua Kinard <kumba@gentoo.org> metadata.xml: