@@ -62,7 +62,7 @@ DIST gcc-3.4.6-patches-1.5.tar.bz2 57250 RMD160 15dd24bf2c8fcff195ce0645fd5bd593
 DIST gcc-3.4.6-piepatches-v8.7.10.tar.bz2 8207 RMD160 b74560140ce242d0e3c7db113c13f77ca7b5a9b9 SHA1 ebdc62a02671d4d101383f6749f27f5ce92c9f97 SHA256 8ed5bbaebc2ce54071063c12e6a11b9913bd9d993d33a51dec52e7b42f477cc6
 DIST gcc-3.4.6-ssp-1.0.tar.bz2 34468 RMD160 0f668e3ffc08297b5ebe3d5cbb9575426008e096 SHA1 d5c6634632b340657e416ecd2ab5b43048c75c23 SHA256 27ff25099ca8617fe2a76cf8ea06acaab39cff9eb91ef64c84971ba324a664e9
 DIST gcc-3.4.6.tar.bz2 28193401 RMD160 b15003368cedc7964f6ceaee0c39ddc43a46c442 SHA1 97b290fdc572c8e490b3b39f243e69bacad23c2b SHA256 7791a601878b765669022b8b3409fba33cc72f9e39340fec8af6d0e6f72dec39
-DIST gcc-4.1.2-patches-1.1.tar.bz2 50224 RMD160 1f1a97930414b791fb621592bc7e00aced7d7c46 SHA1 6f1930077f9244fbfc7bda5907cf985438b5cb9b SHA256 0881f370d23c79ccbb77c13774402de09c6b0a662fb398e6ce18861f64e9503e
+DIST gcc-4.1.2-patches-1.3.tar.bz2 50790 RMD160 50900565645d9ea81c5c4a6990b3408f8b16fe29 SHA1 0c1eae0697bfe9e9656ee6c2d3aef97ac7db54cd SHA256 5fbb55d7f7cc136404d7c9375c3912acdcd49588b1d79f21e358efbc303665a3
 DIST gcc-4.1.2-uclibc-patches-1.0.tar.bz2 20980 RMD160 22e0f27e863e3b7c8fe0a5e4846daee17a49d409 SHA1 28033f25fd9b80102c2ae533b78ba332d490e21d SHA256 c6ed88711a727ed11847c9b9f1cef7023037bc80c0840eda5fca6d60fa02e35a
 DIST gcc-4.1.2.tar.bz2 39707720 RMD160 7c5d78e666ccf4c2b2c3db41e2388f08b6cdf722 SHA1 7981b8d1b58b10ddfd7d5142eab16352d9206f3b SHA256 cfc0efbcc6fcde0d416a32dfb246c9df022515a312683fac412578c4fd09a9bc
 DIST gcc-4.2.3-patches-1.0.tar.bz2 21515 RMD160 2dc6cf804f4bdc5b167158edf132d60d2771a451 SHA1 d325ccaca4592c6b92ca57900a02c5535cbaaaa9 SHA256 690d7ae1eec1fdd98450e01159e532ea87f3ca1d483f0a8c6eb5a450929d7e25
@@ -87,7 +87,7 @@ DIST gcc-4.3.2.tar.bz2 58929447 RMD160 0ced28bd2e0d89f081cf88273b5f1530599b52fb 
 DIST gdc-0.24-src.tar.bz2 1012099 RMD160 f0f33cc02d88ea1174030988c2006cb90029392a SHA1 2be913fe061429c1a279e4cf882e947d34946303 SHA256 cc6a97c76c9e6db31e76ff97014d24b3d43e21f018a3c6218e3fb2a4500fc79a
 EBUILD gcc-3.3.6-r1.ebuild 2987 RMD160 72d3a94a2a9a9569c1256475d892790698a02e4e SHA1 d3e7dadd78800269b05343530df425ef8bb14701 SHA256 7c50db43844fbb57b9e4c7bfb69bb1774b876be7fdfc53c8210a7233f207b9b5
 EBUILD gcc-3.4.6-r2.ebuild 3585 RMD160 e44f4e3902677206735f9b5848b2484b9e9a5896 SHA1 c7508a2186d8092c3abdfb5d4353995137744863 SHA256 69ab89581bdf2052b57c5dfc5abf6cebee90c4b4fe68f22aabadbd744c3e28ba
-EBUILD gcc-4.1.2.ebuild 2841 RMD160 9cddf0ebc20211556ae3a7f6f49bbdee427e902f SHA1 81530f7a3c578b6add46fa0071f885c56f7b23ca SHA256 e2b0d234cfaaa5aeac12d76d6f8bbfcdb39b15edc03dcd34d5b333d9b656ef11
+EBUILD gcc-4.1.2.ebuild 2842 RMD160 9a7e1d2d322bcf0b01eb966cac7639e3d271610e SHA1 0605728eee1e532e95cf8a48a333d22e4494661d SHA256 74c37c855516d8cf9a8d3cc8007cf16bacd5a3b92b30f18658404dd35e57fd5e
 EBUILD gcc-4.2.3.ebuild 4723 RMD160 7977ae6f4e51b20261d2697915c3d9231918edb6 SHA1 5f0704975ee3316e0ef5e105dd67047025d306e1 SHA256 d78516978960fc8e27f8c7a8144fb2e9fe7ceac42010db048afd93b9f4cc84d0
 EBUILD gcc-4.2.4-r1.ebuild 5193 RMD160 f22e6ff2ca2f6a4d3dc598e978a8caf7c961b325 SHA1 29faef9c9c1f31a0448bce9a0a9b7a0f648c8935 SHA256 678b650f3ee6f9bc7645c8b53ccd5f55286c83cf688623df7b0c2fd44f0b74e4
 EBUILD gcc-4.3.0.ebuild 4081 RMD160 02b843205d9efe0720518cfd3b8e3821655c3e46 SHA1 612dbfc6db3ffc08cd90326d9467d6525d1d9927 SHA256 919347b622f361cc225b6509d435756fdd20c3b742bf7f61c2faf2faaf23187d
@@ -95,5 +95,5 @@ EBUILD gcc-4.3.1-r1.ebuild 4184 RMD160 fedaaf2a7e5af24dcae173ce61d4b52d85508629 
 EBUILD gcc-4.3.1.ebuild 4182 RMD160 0872e944a73e1d648681892ee22fbd7e09a859a3 SHA1 9bc8d26395382c27acf521de541cd3d397a70b0d SHA256 f730e352afcc44f34d24588f73732d127febee7d980d94cf33f4091b52b3399a
 EBUILD gcc-4.3.2-r2.ebuild 4598 RMD160 0f94282cd8b52e84c68068532466d83cc4249350 SHA1 04b51cccc4c8a96df75764b0b8fb13e7b8c929c4 SHA256 57f1f01d272730522ad022e671050066c3393ffd70e1a8c34fd881b6d30f1f9c
 EBUILD gcc-4.3.2.ebuild 4253 RMD160 4b21a0e51b85c41b15c7fa21d376246b9779d62f SHA1 19ba99431263b3651da8382baeb4c05e47805997 SHA256 a12e99f6de7c02e3ebfd71805cdcff43d9673c4737ab811d198e39dd7ed91211
-MISC ChangeLog 122582 RMD160 7e64003bd6359d0307949980eccd8fc108dd440c SHA1 f59c5a8aa6a78953d6c7319fcbc5e435f50a5e09 SHA256 42d3ad556bb1cd0390db3d48fd649c867ad297230e7bebef27cfd0444b2632c3
+MISC ChangeLog 122810 RMD160 53d74e7b1395bc26d570f720969bd28471950318 SHA1 c902f11b31a40ea3eedfaa54e4530375809a76cd SHA256 71276e62e5cda5f04171e2aad1d057ac565c5c9cd2508f1fa1101af3caec350f
 MISC metadata.xml 1478 RMD160 3c774d5ceb9dc77c4f164f1b808f8d4812feb06e SHA1 2784e14b4b5aff24f4e8b2931f622cf14d4d1b1a SHA256 340b1805c78481cc39a106bcb27742946a4dd2559fe536c57525f0c2358a41a2
