@@ -1,10 +1,10 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.1.2.ebuild,v 1.20 2008/03/20 20:39:50 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.1.2.ebuild,v 1.22 2009/01/19 16:36:33 halcy0n Exp $
 
 EAPI="prefix"
 
-PATCH_VER="1.1"
+PATCH_VER="1.3"
 UCLIBC_VER="1.0"
 D_VER="0.24"
 
